--- a/app/pages/dogs/dog/dog.page.html
+++ b/app/pages/dogs/dog/dog.page.html
@@ -194,6 +194,9 @@
       <ion-fab-button color="dark">
         <ion-icon name="alert-circle-outline" (click)="onShowAddReminderModal()"></ion-icon>
       </ion-fab-button>
+      <ion-fab-button color="dark">
+        <ion-icon name="document-text-outline" (click)="onShowAddNoteModal()"></ion-icon>
+      </ion-fab-button>
       
     </ion-fab-list>
   </ion-fab>
