--- a/app/pages/schedule/schedule.page.html
+++ b/app/pages/schedule/schedule.page.html
@@ -10,14 +10,19 @@
     </ion-buttons>
     <ion-title>Schedule</ion-title>
   </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
 
   <ion-segment (ionChange)="segmentChanged($event)" [value]="type">
     <ion-segment-button value="calendar">Calendar</ion-segment-button>
     <ion-segment-button value="reminders">Reminders</ion-segment-button>
   </ion-segment>
+</ion-header>
+
+<ion-content>
+
+<!--   <ion-segment (ionChange)="segmentChanged($event)" [value]="type">
+    <ion-segment-button value="calendar">Calendar</ion-segment-button>
+    <ion-segment-button value="reminders">Reminders</ion-segment-button>
+  </ion-segment> -->
 
   <div [ngSwitch]="type">
     <div [hidden]="type != 'calendar'" >
@@ -49,9 +54,9 @@
             </ion-list>
             <ion-list *ngFor="let category of reminders| keyvalue">
               <ion-item-divider>
-                <ion-label>{{ category.key }}</ion-label>
+                <ion-label>{{ groupings[category.key] }}</ion-label>
               </ion-item-divider>
-              <app-reminder-item [reminder]="item" *ngFor="let item of category.value"></app-reminder-item>
+              <app-reminder-item (reminderId)="updateUndoState($event)" [reminder]="item" *ngFor="let item of category.value"></app-reminder-item>
             </ion-list>
           </ion-col>
         </ion-row>
